# ComfyUI_Stable_Makeup

./: LICENSE  README.md  __init__.py  makeup.json  pipeline_sd15.py  pyproject.toml  requirements.txt  spiga_draw.py  stable_makeup_nodes.py
datasets/: spiga_draw.py
datasets/ledits_utils/: prompt.txt
detail_encoder/: encoder_plus.py
example/: example.json  workflow.json  workflow0712.json
facelib/AgeGender/: Detector.py  from_camera.py
facelib/AgeGender/models/: train.py
facelib/FacialExpression/: FaceExpression.py  from_camera.py
facelib/InsightFace/: add_face.py  verifier.py
facelib/InsightFace/models/: Learner.py
facelib/Retinaface/: Retinaface.py  from_camera.py
spiga/data/loaders/: alignments.py  dataloader.py  dl_config.py  transforms.py
spiga/data/loaders/augmentors/: landmarks.py  modern_posit.py
spiga/data/visualize/: inspect_dataset.py  inspect_heatmaps.py  plotting.py
spiga/eval/: results_gen.py
spiga/eval/benchmark/: evaluator.py
spiga/eval/benchmark/metrics/: landmarks.py  pose.py
spiga/inference/: config.py  framework.py  pretreatment.py
spiga/models/: spiga.py
spiga/models/cnn/: cnn_multitask.py  hourglass.py
spiga/models/gnn/: gat.py  step_regressor.py
